--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "dd-trace": "^5.30.0",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "winston": "^3.17.0",
+    "winston-datadog": "^1.1.0"
   }
 }
